# rust-notes-api

./: Cargo.toml  Dockerfile  Dockerfile_old  fly.toml
src/: db.rs  error_handler.rs  main.rs  server.rs
src/middleware/: require_authentication.rs
