[package]
name = "rust-notes-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.9"
lazy_static = "1.4.0"
openssl = "0.10.45"
postgres = "0.19.4"
postgres-openssl = "0.5.0"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.25.0", features = ["rt", "macros", "rt-multi-thread"] }